docs(阶段4/5): 补充标准章节与示例，更新版本与修订历史

--- a/开发指导/04-核心功能实现-天气组件.md
+++ b/开发指导/04-核心功能实现-天气组件.md
@@ -1,4 +1,5 @@
 # 天气鸭项目开发指导 - 阶段4：核心功能实现 - 天气组件
+> 文档版本: v1.1  | 更新日期: 2025-11-13
 
 ## 📋 阶段概述
 
@@ -12,6 +13,122 @@
 - ✅ 实现天气预报组件（需求3、需求4）
 - ✅ 集成天气动画系统（需求2）
 - ✅ 创建天气图标映射
+
+---
+
+## 标准章节补充
+
+### 概述
+- 本阶段围绕“天气组件”的实现与集成，目标是以统一的UI规范展示当前天气、7天预报与24小时预报，并确保示例代码与现有代码库可直接对接。
+- 数据来源为和风天气QWeather API，当前项目以响应体中的`code`字段进行状态判断（v1错误码语义）。
+
+### 接口定义
+- 基础Host与版本：`QWEATHER_API_CONFIG.BASE_URL`（HTTPS）与`QWEATHER_API_CONFIG.VERSION`（例如`v7`）。
+- 主要端点：
+  - 当前天气：`/weather/now`
+  - 7天预报：`/weather/7d`
+  - 24小时预报：`/weather/24h`
+- GeoAPI端点（城市搜索等）：`QWEATHER_GEO_CONFIG.VERSION + /city/lookup`
+- 项目内适配：通过`WeatherService`与`CityService`封装HTTP访问、缓存与错误处理。
+
+### 请求参数
+- 必选参数：`location`（城市LocationID或坐标）、`key`（API KEY）。
+- 可选参数：`lang`、`number`、`adm`、`range`（城市搜索）；请求超时、重试次数等通过`API_REQUEST_CONFIG`统一控制。
+- 安全要求：API KEY必须来源于环境变量`import.meta.env.VITE_QWEATHER_API_KEY`，且使用HTTPS Host。
+
+### 响应格式
+- 项目类型定义：`QWeatherResponse<T>`、`CurrentWeather`、`WeatherForecast`、`HourlyWeather`（见`src/types/weather.ts`）。
+- 状态判断：以`response.code`（字符串）为基准，`200`为成功，`204`表示暂无数据，其余按错误处理规范抛出自定义错误。
+
+### 错误代码
+- 与和风天气错误码v1一致：`200`成功、`204`无数据、`400`请求错误、`401`认证失败、`402`额度不足、`403`无权限、`404`不存在、`429`超QPM、`500`服务异常。
+- 结合项目错误体系：统一抛出`ApiError`、`NetworkError`、`TimeoutError`等（见`src/utils/errors.ts`），并在UI层进行友好提示与重试策略。
+
+### 示例代码（可直接运行）
+```tsx
+import React, { useEffect, useState } from 'react'
+import { Card } from '@/components/Card'
+import { Icon } from '@/components/Icon'
+import { WeatherService } from '@/services/weather-service'
+import { API_REQUEST_CONFIG, DEFAULT_CITY_CONFIG, QWEATHER_API_CONFIG } from '@/config/api-config'
+import type { CurrentWeather } from '@/types/weather'
+
+const service = new WeatherService()
+
+export const WeatherDemo: React.FC = () => {
+  const [weather, setWeather] = useState<CurrentWeather | null>(null)
+  const [error, setError] = useState<string | null>(null)
+  const [loading, setLoading] = useState(true)
+
+  useEffect(() => {
+    const run = async () => {
+      try {
+        if (!API_REQUEST_CONFIG.API_KEY || API_REQUEST_CONFIG.API_KEY.length !== 32) {
+          throw new Error('缺少或非法的和风天气 API 密钥')
+        }
+        if (!String(QWEATHER_API_CONFIG.BASE_URL).startsWith('https://')) {
+          throw new Error('API Host 必须使用 HTTPS')
+        }
+        const data = await service.getCurrentWeather(DEFAULT_CITY_CONFIG.CITY_ID)
+        setWeather(data)
+      } catch (e: any) {
+        setError(e?.message || '获取天气失败')
+      } finally {
+        setLoading(false)
+      }
+    }
+    run()
+  }, [])
+
+  if (loading) {
+    return <Card padding="md">加载中...</Card>
+  }
+  if (error) {
+    return (
+      <Card padding="md">
+        <div className="text-red-600 flex items-center">
+          <Icon name="AlertCircle" size={18} className="mr-2" />
+          {error}
+        </div>
+      </Card>
+    )
+  }
+
+  return (
+    <Card variant="glass" padding="lg" className="space-y-2">
+      <div className="flex items-center justify-between">
+        <div className="text-6xl font-bold text-blue-900">{Math.round(Number(weather!.temp))}°</div>
+        <div className="text-right">
+          <div className="text-lg font-medium text-blue-900">{weather!.text}</div>
+          <div className="text-sm text-blue-600">体感 {Math.round(Number(weather!.feelsLike))}°</div>
+        </div>
+      </div>
+      <div className="grid grid-cols-4 gap-2 pt-3 border-t border-blue-200">
+        <div className="text-center">
+          <Icon name="Droplets" size={16} className="mx-auto mb-1" />
+          <div className="text-xs text-blue-600">湿度</div>
+          <div className="text-sm font-bold text-blue-900">{weather!.humidity}%</div>
+        </div>
+        <div className="text-center">
+          <Icon name="Wind" size={16} className="mx-auto mb-1" />
+          <div className="text-xs text-blue-600">风速</div>
+          <div className="text-sm font-bold text-blue-900">{weather!.windSpeed}km/h</div>
+        </div>
+        <div className="text-center">
+          <Icon name="Gauge" size={16} className="mx-auto mb-1" />
+          <div className="text-xs text-blue-600">气压</div>
+          <div className="text-sm font-bold text-blue-900">{weather!.pressure}hPa</div>
+        </div>
+        <div className="text-center">
+          <Icon name="Eye" size={16} className="mx-auto mb-1" />
+          <div className="text-xs text-blue-600">能见度</div>
+          <div className="text-sm font-bold text-blue-900">{weather!.vis}km</div>
+        </div>
+      </div>
+    </Card>
+  )
+}
+```
 
 ---
 
@@ -919,6 +1036,13 @@ export * from './Weather';
 
 ---
 
-**文档版本**: v1.0  
-**更新日期**: 2024-01-01  
+**文档版本**: v1.1  
+**更新日期**: 2025-11-13  
 **维护团队**: 天气鸭开发团队
+
+### 修订历史
+- v1.1 (2025-11-13)
+  - 补充标准章节（概述/接口/参数/响应/错误/示例）
+  - 优化示例代码以满足可直接运行的要求
+  - 术语与错误码对齐到项目实现（v1）
+  - 更新版本号与日期
