--- a/开发指导/05-核心功能实现-时钟和报时.md
+++ b/开发指导/05-核心功能实现-时钟和报时.md
@@ -1,4 +1,5 @@
 # 天气鸭项目开发指导 - 阶段5：核心功能实现 - 时钟和报时
+> 文档版本: v1.1  | 更新日期: 2025-11-13
 
 ## 📋 阶段概述
 
@@ -12,6 +13,134 @@
 - ✅ 创建模拟时钟组件（需求13）
 - ✅ 实现布谷鸟报时功能（需求12）
 - ✅ 集成音频播放系统
+
+---
+
+## 标准章节补充
+
+### 概述
+- 本阶段聚焦“时钟显示与整点报时”。示例代码以现有组件为基础，提供可直接运行的数字时钟展示与报时逻辑示例，并对音频播放安全与错误恢复进行说明。
+
+### 接口定义
+- 前端接口（Hooks/组件约定）：
+  - `useClock`：提供当前时间数据（小时/分钟/秒、格式化字符串）
+  - `useHourlyChime`：在整点触发报时回调
+  - `AudioManager`：基于 Web Audio API 的音频播放管理（主音量、播放、释放资源）
+- 以上为建议抽象；示例代码提供无需新文件的可运行版本。
+
+### 请求参数
+- 无外部API请求参数；报时逻辑可配置时间段（如8:00-22:00）、音量范围（0-1）。
+- 运行条件：浏览器环境需支持 Web Audio API（如`AudioContext`）。
+
+### 响应格式
+- 时钟数据结构：`{ hours, minutes, seconds, formattedTime, formattedDate, isPM }`。
+- 报时回调：接收当前小时数并执行播放逻辑；错误情况下需优雅降级并给出提示。
+
+### 错误代码
+- 不涉及外部服务错误码；但需遵守项目错误处理规范：
+  - 音频上下文初始化失败时记录错误并放弃播放
+  - 用户未交互导致`AudioContext`挂起时的恢复处理
+
+### 示例代码（可直接运行）
+```tsx
+import React, { useEffect, useMemo, useRef, useState } from 'react'
+import { Card } from '@/components/Card'
+import { Icon } from '@/components/Icon'
+
+export const ClockDemo: React.FC = () => {
+  const [now, setNow] = useState(new Date())
+  const [isChiming, setIsChiming] = useState(false)
+  const audioCtxRef = useRef<AudioContext | null>(null)
+  const gainRef = useRef<GainNode | null>(null)
+
+  useEffect(() => {
+    const timer = setInterval(() => setNow(new Date()), 1000)
+    return () => clearInterval(timer)
+  }, [])
+
+  useEffect(() => {
+    const h = now.getHours()
+    const m = now.getMinutes()
+    const s = now.getSeconds()
+    if (h >= 8 && h < 22 && m === 0 && s === 0) {
+      setIsChiming(true)
+      const times = h > 12 ? h - 12 : h
+      playCuckoo(times).finally(() => setIsChiming(false))
+    }
+  }, [now])
+
+  const playCuckoo = async (times: number) => {
+    try {
+      if (!audioCtxRef.current) {
+        const Ctx = (window as any).AudioContext || (window as any).webkitAudioContext
+        audioCtxRef.current = Ctx ? new Ctx() : null
+        if (!audioCtxRef.current) return
+        gainRef.current = audioCtxRef.current.createGain()
+        gainRef.current.gain.value = 0.5
+        gainRef.current.connect(audioCtxRef.current.destination)
+      }
+      if (audioCtxRef.current.state === 'suspended') {
+        await audioCtxRef.current.resume()
+      }
+      for (let i = 0; i < times; i++) {
+        await beep()
+        if (i < times - 1) await sleep(800)
+      }
+    } catch (e) {
+    }
+  }
+
+  const beep = async () => {
+    if (!audioCtxRef.current || !gainRef.current) return
+    const osc = audioCtxRef.current.createOscillator()
+    const g = audioCtxRef.current.createGain()
+    osc.connect(g)
+    g.connect(gainRef.current)
+    osc.type = 'sine'
+    osc.frequency.setValueAtTime(800, audioCtxRef.current.currentTime)
+    osc.frequency.setValueAtTime(600, audioCtxRef.current.currentTime + 0.15)
+    g.gain.setValueAtTime(0, audioCtxRef.current.currentTime)
+    g.gain.linearRampToValueAtTime(0.3, audioCtxRef.current.currentTime + 0.05)
+    g.gain.linearRampToValueAtTime(0, audioCtxRef.current.currentTime + 0.3)
+    osc.start()
+    osc.stop(audioCtxRef.current.currentTime + 0.3)
+    await sleep(300)
+  }
+
+  const sleep = (ms: number) => new Promise(r => setTimeout(r, ms))
+
+  const formattedDate = useMemo(() => now.toLocaleDateString('zh-CN', {
+    year: 'numeric', month: 'long', day: 'numeric', weekday: 'long'
+  }), [now])
+  const hh = String(now.getHours()).padStart(2, '0')
+  const mm = String(now.getMinutes()).padStart(2, '0')
+  const ss = String(now.getSeconds()).padStart(2, '0')
+
+  return (
+    <Card variant="glass" padding="lg" className="text-center">
+      <div className="text-blue-600 text-sm mb-2">{formattedDate}</div>
+      <div className="font-mono text-6xl font-bold text-blue-900 tracking-wider">
+        {hh}<span className="animate-pulse">:</span>{mm}
+        <span className="animate-pulse">:</span>
+        <span className="text-4xl text-blue-600">{ss}</span>
+      </div>
+      <div className="mt-4 h-24">
+        {isChiming && (
+          <div className="relative w-24 h-24 mx-auto">
+            <div className="text-6xl animate-bounce">🦆</div>
+            <div className="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+              <div className="w-24 h-24 rounded-full border-4 border-blue-400 animate-ping opacity-75" />
+            </div>
+            <div className="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+              <div className="w-32 h-32 rounded-full border-4 border-blue-300 animate-ping opacity-50" />
+            </div>
+          </div>
+        )}
+      </div>
+    </Card>
+  )
+}
+```
 
 ---
 
@@ -971,6 +1100,13 @@ export type { HourlyChimeOptions } from './use-hourly-chime';
 
 ---
 
-**文档版本**: v1.0  
-**更新日期**: 2024-01-01  
+**文档版本**: v1.1  
+**更新日期**: 2025-11-13  
 **维护团队**: 天气鸭开发团队
+
+### 修订历史
+- v1.1 (2025-11-13)
+  - 补充标准章节（概述/接口/参数/响应/错误/示例）
+  - 新增可直接运行的时钟与报时示例代码
+  - 明确音频上下文恢复与降级策略
+  - 更新版本号与日期
